// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorFormatEditor should render multiple colors 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "regex",
          "name": <FormattedMessage
            defaultMessage="Pattern (regular expression)"
            id="indexPatternManagement.color.patternLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": <FormattedMessage
            defaultMessage="Text color"
            id="indexPatternManagement.color.textColorLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": <FormattedMessage
            defaultMessage="Background color"
            id="indexPatternManagement.color.backgroundLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "name": <FormattedMessage
            defaultMessage="Example"
            id="indexPatternManagement.color.exampleLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "Actions",
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
        Object {
          "background": "#ffffff",
          "index": 1,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <FormattedMessage
      defaultMessage="Add color"
      id="indexPatternManagement.color.addColorButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;

exports[`ColorFormatEditor should render other type normally (range field) 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "range",
          "name": <FormattedMessage
            defaultMessage="Range (min:max)"
            id="indexPatternManagement.color.rangeLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": <FormattedMessage
            defaultMessage="Text color"
            id="indexPatternManagement.color.textColorLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": <FormattedMessage
            defaultMessage="Background color"
            id="indexPatternManagement.color.backgroundLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "name": <FormattedMessage
            defaultMessage="Example"
            id="indexPatternManagement.color.exampleLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "Actions",
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <FormattedMessage
      defaultMessage="Add color"
      id="indexPatternManagement.color.addColorButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;

exports[`ColorFormatEditor should render string type normally (regex field) 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "regex",
          "name": <FormattedMessage
            defaultMessage="Pattern (regular expression)"
            id="indexPatternManagement.color.patternLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": <FormattedMessage
            defaultMessage="Text color"
            id="indexPatternManagement.color.textColorLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": <FormattedMessage
            defaultMessage="Background color"
            id="indexPatternManagement.color.backgroundLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "name": <FormattedMessage
            defaultMessage="Example"
            id="indexPatternManagement.color.exampleLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "Actions",
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <FormattedMessage
      defaultMessage="Add color"
      id="indexPatternManagement.color.addColorButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;
